--- a/Desktop/Shikkha.com/client/package.json
+++ b/Desktop/Shikkha.com/client/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
