--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -11,7 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
-    "axios": "^1.11.0",
+    "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "react": "^19.1.0",
