--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
+  "scripts": {
+    "start": "npm start --prefix server",
+    "dev": "npm run server --prefix server"
+  },
   "dependencies": {
-    "@huggingface/inference": "^4.7.1",
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express-rate-limit": "^8.0.1",
-    "node-fetch": "^3.3.2"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.0"
   }
 }
