--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@stripe/react-stripe-js": "^3.9.1",
+    "@stripe/stripe-js": "^7.8.0",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
