--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 # Database
-MONGO_URI=mongodb+srv://shikkha_admin:Shikkha123@cluster0.xrtd0cz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb
 MONGO_DB=shikkha
 
 # Server
