complete deployment of the project

--- a/server/.env.production
+++ b/server/.env.production
@@ -21,3 +21,7 @@ CLIENT_URL=https://shikkhacom.vercel.app
 
 # CORS Origins (Comma-separated for multiple domains)
 CORS_ORIGINS=https://shikkhacom.vercel.app
+
+# Mistral AI Configuration
+MISTRAL_API_KEY=your_mistral_api_key_here
+MISTRAL_MODEL=mistral-tiny
